$Id: /xmltwig/trunk/Changes 33 2008-04-30T08:03:41.004487Z mrodrigu  $

CHANGES

version: 3.35
date:
# minor maintenance release
fixed: documented the fact that latin1 is ISO-8859-15, see RT#37431
       https://rt.cpan.org/Ticket/Display.html?id=37431

version: 3.34
date: 2010-01-18
# minor maintenance release, test suite fixes
fixed: tests failed when XML::XPath was used as the XPath engine

version: 3.33
date: 2010-01-15
# minor maintenance release, bug fixes
added: XML::Twig::Elt method att_exists which returns true if the attribute
       exists in the XML
added: XML::Twig::Elt method lc_attnames which lower cases the names
      of all the attribute of the element
added: better error message if find_nodes or get_xpath are called instead
      of findnodes when using XML::Twig::XPath (suggested by Zed Pobre)
added: indented_close_tag pretty_print option (suggested by H.Merijn Brand)
added: RT #49692 xml_split test on win 32 systems. Patch sent through RT 
       http://rt.cpan.org/Ticket/Display.html?id=49692
added: using position selector (eg foo[2]) in handler triggers now raises 
      an error, spotted by Selvakumar
added: you can use css like selectors for class in navigation: 'p.title' will
      select p elements with a class that contains title. 
      In order to preserve backward compatibility and to allow the use of
      elements with a dot in their name, if there are already parsed elements
      with a tag name of 'p.title' then they will be selected instead
added: you can also use css class selectors in trigger handlers. 
fix:  avoids expat (and XML::Parser) "Ran out of memory for input buffer"
      error, and instead reports an "empty file" error (and does not attempt
      to parse the file).
fix:  RT #51432 attributes containing quote character don't escape properly
      found, and patch provided by Jeremy Kahn
      https://rt.cpan.org/Ticket/Display.html?id=51432
fix:  RT #48616 handler condition of foo/* crashed the module